--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,5 +26,7 @@ jobs:
           pip install pyspark  # Ensure spark is available
 
       - name: Run Unit Tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           python -m unittest discover -s tests
