--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: flake8 .
 
       - name: Run Bandit (Python Security Scanner)
-        run: bandit -r . -x tests
+        run: bandit -r . -x tests --severity-level high
 
   unit-tests:
     name: Run Unit Tests
